# manifold-rust

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  PORTING_PLAN.md  README.md  validate-reference.ps1
.claude/: launch.json
.github/workflows/: deploy-demo.yml  test.yml
demo/: build.ts  capture-thumbs.ts  dev.ts  index.html  package.json  server.ts  tsconfig.json
demo/src/: controls.ts  main.ts  settings.ts  three-viewer.ts  wasm.ts
demo/src/demos/: about.ts  boolean-gallery.ts  boolean-ops.ts  convex-hull.ts  extrude-revolve.ts  extrude-twist.ts  menger-sponge.ts  primitives.ts  properties.ts  revolve-partial.ts  smooth-shapes.ts  test-gallery.ts
demo/styles/: main.css
demo/wasm/: Cargo.toml
demo/wasm/src/: lib.rs
examples/: large_scene_test.rs  mem_profile.rs  perf_test.rs
src/: boolean3.rs  boolean3_tests.rs  boolean_result.rs  boolean_result_assemble.rs  collider.rs  constructors.rs  cross_section.rs  csg_tree.rs  disjoint_sets.rs  edge_op.rs  edge_op_tests.rs  face_op.rs  impl_mesh.rs  impl_mesh_tests.rs  interp_tri.rs  lib.rs  linalg.rs  linalg_tests.rs  manifold.rs  manifold_meshgl.rs  math.rs  minkowski.rs  par.rs  polygon.rs  polygon_earclip.rs  polygon_tests.rs  properties.rs  quickhull.rs  quickhull_algo.rs  quickhull_tests.rs  sdf.rs  smoothing.rs  smoothing_tangents.rs  smoothing_tests.rs  sort.rs  subdivision.rs  subdivision_partition.rs  subdivision_tests.rs  svd.rs  timing.rs  (+4 more)
src/manifold_tests/: advanced.rs  api.rs  basic.rs  boolean.rs  complex.rs  cross_section2.rs  error_propagation.rs  hull.rs  mesh_ops.rs  mod.rs  normals.rs  properties.rs  raycast.rs  sdf.rs  smooth.rs  validation.rs
