[workspace]
members = [".", "demo/wasm"]

[package]
name = "manifold-rust"
version = "0.9.2"
edition = "2021"
# f64::round_ties_even (used in the C++-exact sind) stabilized in 1.77.
rust-version = "1.77"
authors = ["Lars Brubaker <larsbrubaker@matterhackers.com>"]
description = "Pure Rust port of the Manifold 3D geometry library"
license = "Apache-2.0"
repository = "https://github.com/larsbrubaker/manifold-rust"
homepage = "https://larsbrubaker.github.io/manifold-rust/"
documentation = "https://docs.rs/manifold-rust/"
readme = "README.md"
keywords = ["3d", "geometry", "mesh", "boolean", "csg"]
categories = ["algorithms", "graphics", "mathematics", "wasm"]
exclude = ["demo/", "docs/", "tests/", ".github/", ".claude/", "cpp-reference/", "CLAUDE.md"]

[lib]
name = "manifold_rust"
path = "src/lib.rs"

[dependencies]
num-traits = "0.2"
clipper2-rust = "1.0.3"
rayon = { version = "1.10", optional = true }

[features]
# Parallel execution via rayon. Only determinism-preserving sites are
# parallelized, so results stay bit-identical to the sequential build
# (unlike upstream C++ MANIFOLD_PAR, which permits nondeterministic
# vertex ordering in some phases).
parallel = ["dep:rayon"]

# Match the optimization latitude the C++ reference gets from MSVC /O2 with
# unity-style TUs: fat LTO + one codegen unit lets rustc inline across the
# module graph. Measurably faster on the boolean pipeline; slower to build.
[profile.release]
lto = "fat"
codegen-units = 1

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "manifold_bench"
harness = false
